changed pyramid image to take up 80% of the width at full screen as it was overpowering, adjusted spacing between 1. and 2.+ numbers, updated tailwind binary to watch changes made to template files and the output directory so that i do not miss the background image bug again (#18)

--- a/src/output.css
+++ b/src/output.css
@@ -818,6 +818,10 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:max-w-\[80\%\] {
+    max-width: 80%;
+  }
+
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
